--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "webpack":"2.6.1"
   }
 }
