--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "sample app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon"
   },
   "author": "anurag negi",
   "license": "ISC",
@@ -12,8 +12,9 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "nodemon": "^1.11.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "webpack":"2.6.1"
+    "webpack": "2.6.1"
   }
 }
