--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^1.11.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "webpack": "2.6.1"
+    "webpack": "2.6.1",
+    "mysql": "^2.13.0"
   }
 }
