--- a/package.json
+++ b/package.json
@@ -11,23 +11,22 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
     "body-parser": "^1.17.2",
+    "cheerio": "^1.0.0-rc.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "mysql": "^2.13.0",
     "nodemon": "^1.11.0",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "webpack": "2.6.1",
-    "mysql": "^2.13.0"
+    "request": "^2.81.0"
   }
 }
